# master_thesis

./: .gitignore  README.md  experiment_analysis_parameters.json  fiftyone_test.py  pipeline_parameters.json  project_config.py  pyproject.toml  requirements.txt  submit.sh  train.job  train_masking.job
adhoc/: ct_scan_visualisation.ipynb  learning_ml_flow.py  learning_pydilc.ipynb  learning_wandb.ipynb  lidc_eda.ipynb  nodule_sizes_eda.ipynb
adhoc/learning/: how_to_spatially_normalise.py  testing_binarification.py
adhoc/lidc_dataset/: analyse_embeddings_in_3D.py  create_annotations_df.py  create_nodule_annotation_df.py  create_nodule_df.py  ct_scan_visualisation.ipynb  dicom_metadata_eda.ipynb  extract_dicom_meta_data.py  generate_meta_dataframe.py  manually_reviewing_rois.ipynb  meta_data_distribution.py  meta_data_eda.py  meta_data_image_inspection.py  metadata_eda.ipynb  nodule_df_eda.ipynb  visualising_cv_methods.ipynb  visualising_rois.ipynb
analysis/: analyse_embeddings.py  annotater_agreement.py  cluster_analysis.py  fiftyone_app.py  get_embeddings.py  inspect_fiftyone.py  scan_level_shortcut_annotations.csv  second_fiftyone.ipynb  shap_explanations.py
analysis/annotation_agreement/: annotater_agreement.py  annotation_df.csv  create_annotations_df.py
analysis/eda/: eda_data_used_for_training.ipynb  visualising_rois.ipynb
analysis/fiftyone_app/: add_embeddings.py  add_sample_data.py  (+7 more)
data/: create_img_dataset_version.py  create_nodule_dataset.py  data_augmentations.py  dataset.py  precompute_nodule_dataset.py
fiiftyone/: creating_own_dataset.py  fiftyone_testing.py
hpc/: create_dataset.job  fetch_files.py  fetch_hpc_data.py  fetch_hpc_output.py  get_embeddings.job  get_predictons.job  precompute_dataset.job  run_benchmark.job  train.job
model/: ResNet.py  baseline_model.py  benchmark.py  data_augmentations.py  dataset.py  get_embeddings.py  get_embeddings_hpc.py  get_predictions.py  get_predictions_hpc.py  inference.py  model_benchmark_results.csv  model_benchmark_results.json  overfit_to_single_batch.py  processing.py  profiling.py  train.py
preprocessing/: create_cv_df.py  create_hold_out_set.py  create_nodule_df.py  data_augmentations.py  dicom_meta_data.csv  generate_meta_dataframe.py  hold_out_nodule_df.csv  hold_out_pids.json  nodule_df.csv  process_nodule_df.ipynb  processed_nodule_df.csv  processing.py
report/: plots.ipynb  plots_and_tables.ipynb
src/: dataset.py
test/: overfit_to_single_batch.py  test_ResNet.py  test_precomputed_nodules.py  test_preprocessing.py  test_training.py
testing/: learning_pydilc.ipynb  lidc_eda.ipynb
train/: early_stopping.py  hold_out_evaluation.ipynb  metrics.py  overfit_to_single_batch.py  profiling.py  train.py
utils/: common_imports.py  cwce.py  data_models.py  dicom_encoding_mapping.pkl  dicom_encoding_mapping_reverse.pkl  early_stopping.py  experiments.py  logger_setup.py  metrics.py  processing.py  pylidc_utils.py  utils.py  visualisation.py  visualisations.py
visualisation_app/: main.py  plotly_vis.py  utils.py
(+69 files in other folders)
