[tool.poetry]
name = "master_thesis"
description = "A project for finding hidden shortcuts in 3D medical images"
version = "0.1.0"
authors = ["Max Andreas de Visser", "Bianca Pedersen"]
readme = "README.md"
packages = [{ include = "poetry_demo" }]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.5"
xlrd = "^2.0.1"                                       # Required for pandas to read excel files
pylidc = "^0.2.3"                                     # Package for LIDC-IDRI dataset
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
pyqt6 = "^6.7.1"                                      # Required for itkwidgets (do not remember why it is needed)
scipy = "^1.14.1"
ruff = "^0.6.4"
mypy = "^1.11.2"
pydantic = "^2.9.2"
mlflow = "^2.16.2"
acsconv = { git = "https://github.com/M3DV/ACSConv" }
coral-pytorch = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
