[tool.poetry]
name = "master_thesis"
description = "A project for finding hidden shortcuts in 3D medical images"
version = "0.1.0"
authors = ["Max Andreas de Visser", "Bianca Pedersen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
numpy = "^2.1.0"
pandas = "^2.2.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.5"
pylidc = "^0.2.3"
python-dotenv = "^1.0.1"
scipy = "^1.14.1"
pydantic = "^2.9.2"
acsconv = { git = "https://github.com/M3DV/ACSConv" }
coral-pytorch = "^1.4.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
