[tool.poetry]
name = "master_thesis"
description = "A project for finding hidden shortcuts in 3D medical images"
version = "0.1.0"
authors = ["Max Andreas de Visser", "Bianca Pedersen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
numpy = "^1.22"                                       # downgraded numpy to 1.22 for shap installation
pandas = "^2.2.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.5"
pylidc = "^0.2.3"
python-dotenv = "^1.0.1"
scipy = "^1.14.1"
pydantic = "^2.9.2"
acsconv = { git = "https://github.com/M3DV/ACSConv" }
coral-pytorch = "^1.4.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
fiftyone = "^1.0.2"
llvmlite = "^0.43.0"                                  # dependency for shap
slicer = "^0.0.8"                                     # dependency for shap
numba = "^0.60.0"                                     # dependency for shap
shap = "^0.46.0"

[tool.poetry.group.dev.dependencies]
tensorboard = "^2.18.0"
torch-tb-profiler = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
